[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/player.png" type="Texture" id=1]
[ext_resource path="res://assets/sounds/Player/spawn/spawn1.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/Player/spawn/spawn0.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/Player/spawn/spawn2.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/Player/spawn/spawn3.wav" type="AudioStream" id=5]
[ext_resource path="res://src/AudioBankPlayer.gd" type="Script" id=6]
[ext_resource path="res://src/Character/Character.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Character" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 79, 78 )
frames = SubResource( 5 )

[node name="SoundFx" type="Node" parent="."]

[node name="SpawnSound" type="AudioStreamPlayer" parent="SoundFx"]
volume_db = -80.0
script = ExtResource( 6 )
sounds = [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ) ]

[node name="MoveTick" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Tween" type="Tween" parent="."]
